ajuste de user
